<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/dateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_alignParentTop="true"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/moodText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/moodrb"
                android:layout_below="@id/dateButton"
                android:layout_marginTop="15dp"
                android:text="@string/mood"
                android:textSize="20sp"
                android:gravity="center"/>
            <RatingBar
                android:id="@+id/moodrb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/dateButton"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:textSize="20sp"
                android:numStars="5"
                android:stepSize="1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/stressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/stressrb"
                android:layout_below="@id/moodrb"
                android:layout_marginTop="15dp"
                android:text="@string/stress"
                android:textSize="20sp"
                android:gravity="center"/>
            <RatingBar
                android:id="@+id/stressrb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/moodrb"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:textSize="20sp"
                android:numStars="5"
                android:stepSize="1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/eatText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/eatrb"
                android:layout_below="@id/stressrb"
                android:layout_marginTop="15dp"
                android:text="@string/eat"
                android:textSize="20sp"
                android:gravity="center"/>
            <RatingBar
                android:id="@+id/eatrb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/stressrb"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:textSize="20sp"
                android:numStars="5"
                android:stepSize="1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/sleepText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/sleeprb"
                android:layout_below="@id/eatrb"
                android:layout_marginTop="15dp"
                android:text="@string/sleep"
                android:textSize="20sp"
                android:gravity="center"/>
            <RatingBar
                android:id="@+id/sleeprb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/eatrb"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:textSize="20sp"
                android:numStars="5"
                android:stepSize="1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/exText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/exrb"
                android:layout_below="@id/sleeprb"
                android:layout_marginTop="15dp"
                android:text="@string/ex"
                android:textSize="20sp"
                android:gravity="center"/>
            <RatingBar
                android:id="@+id/exrb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/sleeprb"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:textSize="20sp"
                android:numStars="5"
                android:stepSize="1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/noteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_below="@id/exrb"
                android:text="@string/note"
                android:textSize="20sp"
                android:gravity="center"/>
            <EditText
                android:id="@+id/noteEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/noteText"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textMultiLine"
                android:text=""
                android:textSize="20sp"
                android:background="@android:color/transparent" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>